# meeting-agent

./: .gitignore  PLAN.md  README.md  implementation-steps.md  project-plan.md  pyproject.toml
meeting_agent/: auth.py  cli.py  config.py  day_processing.py  errors.py  exit_codes.py  links.py  llm.py  logging.py  models.py  normalize.py  note_schema.py  pipeline.py  quarantine.py  retrieval.py  routing.py  staging.py  state.py  tui.py  writer.py
skills/grill-me/: SKILL.md
skills/improve-codebase-architecture/: ADR-FORMAT.md  CONTEXT-FORMAT.md  DEEPENING.md  HTML-REPORT.md  INTERFACE-DESIGN.md  LANGUAGE.md  SKILL.md
skills/meeting-agent/: SKILL.md
skills/meeting-agent/agents/: openai.yaml
tests/: conftest.py  test_acceptance.py  test_auth.py  test_cli_auth_check.py  test_cli_auth_import.py  test_cli_init.py  test_cli_models.py  test_cli_process.py  test_cli_process_day.py  test_cli_tui.py  test_config.py  test_day_processing.py  test_exit_codes.py  test_links_property.py  test_links_unit.py  test_llm.py  test_logging.py  test_models.py  test_normalize.py  test_note_schema.py  test_pipeline.py  test_quarantine.py  test_retrieval.py  test_routing_property.py  test_routing_unit.py  test_staging.py  test_state.py  test_writer.py
