[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-agent"
version = "0.1.0"
description = "CLI agent for retrieving Granola meeting transcripts and writing Obsidian notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "platformdirs>=4.2.0",
  "keyring>=25.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "hypothesis>=6.112.0",
]

[project.scripts]
meeting-agent = "meeting_agent.cli:app"
ma = "meeting_agent.cli:app"

[tool.setuptools.packages.find]
include = ["meeting_agent*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
